[package]
name = "mixnmatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "^1"
lazy_static = "^1"
chrono = "*"
config = "*"
serde_json = "^1"
urlencoding = "^2"
roxmltree = "*"
mediawiki = "*"
wikibase = { git = "https://gitlab.com/tobias47n9e/wikibase_rs" }
tokio = { version = "^1", features = ["full","rt-multi-thread"] }
futures = "*"
mysql_async = "*"
md5 = "*"
reqwest = { version="*" , features=["gzip","deflate","brotli"] }
async-trait = "*"
csv = "*"
rand = "*"
uuid = { version="*", features=["v4"] }
itertools = "*"
html-escape = "*"
tempfile = "*"
fancy-regex = "*"
dashmap = "5"

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

[profile.bench]
lto = 'thin'
codegen-units = 1
