[package]
name = "mixnmatch"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
regex = "^1"
lazy_static = "^1"
chrono = "*"
serde = "*"
serde_json = "^1"
urlencoding = "^2"
mediawiki = "*"
wikimisc = { git = "https://github.com/magnusmanske/wikimisc" }
tokio = { version = "^1", features = ["full", "rt-multi-thread"] }
futures = "*"
mysql_async = "*"
reqwest = { version = "*", features = ["gzip", "deflate", "brotli"] }
async-trait = "*"
csv = "*"
rand = "*"
uuid = { version = "*", features = ["v4"] }
itertools = "*"
html-escape = "*"
dashmap = "5"
anyhow = "*"
sysinfo = "*"
log = "*"
axum = { version = "*", features = ["multipart"] }
wikibase = "*"
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
tower = "*"
tower-http = { version = "*", features = ["fs", "trace"] }
tower-sessions = "0.15"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rcgen = "0.14"
rust-ini = "0.21"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
time = "0.3"
bytes = "1"

[profile.release]
lto = 'thin'
panic = 'abort'
codegen-units = 1

[profile.bench]
lto = 'thin'
codegen-units = 1
